2001-05-06  DJ Delorie  <dj@delorie.com>

	* Version 1.2 released.

2001-05-06  DJ Delorie  <dj@delorie.com>

	* lib/table.c (init_ace): use strtol instead of atoi.
	* lib/help.c (help_init): Use pixel_for instead of
	{White,Black}Pixel
	* lib/xwin.h: Support alternate visuals.  Detect Agenda X server
	vs other StaticGray servers.
	(pixel_for): Make global for help_init().  Support PseudoColor,
	GrayScale, and StaticColor.

	* lib/Makefile.am: Add table_rs.c.
	* lib/Makefile.in: Regenerate.
	* lib/cards.h: Split init_table into init_ace and init_table,
	so we can check the display size before selecting a table
	size.  Add command line option support.  Add resize support.
	* lib/help.c: Scroll menus as needed.  Support click on screen
	to scroll.  Support key scrolling.  Support resizing.
	* lib/images.in: Replace back with back-tile.
	* lib/table.c: Split init_table into init_ace and init_table.
	Add command-line option support.  Add width/height options.
	Limit table to display size.  Support resizing.
	(card_synth2): Tweak kqj display.
	(card_synth): Make sure cards are big enough to show suits.
	(back_synth): New.
	* lib/xwin.c: Support -rotate (experimental).  Split init_xwin
	into xwin_init and xwin_create.  Support resizing.
	* lib/xwin.h: Split init/create.
	* lib/stack.c: Support resizing.
	(stack_set_card_size): New.
	(stack_get_card_size): New.
	(stack_get_fans): New.
	* lib/table_rs.c: New, catch resize if not supported.
	* lib/png/a-k.2.png: New, larger.
	* lib/png/back-tile.png: New, for building face-down cards.
	* lib/png/suits.26.png: New, larger.

	* games/canfield.c: Support new init API.
	* games/freecell.c: Support new init API.  Support resizing.
	Add more keys.
	* games/golf.c: Support new init API.
	* games/mastermind.c: Support new init API.
	* games/merlin.c: Support new init API.
	* games/minesweeper.c: Support new init API.
	* games/pegged.c: Support new init API.
	* games/solitaire.c: Support new init API.  Support resizing.